--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -2,3 +2,9 @@ body{
     font-family: "Poppins", sans-serif;
     font-size: 16px;
 }
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
