change svg way + add footer scss to main

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,5 @@
 @import './utils/functions';
 @import './common';
 @import './components/header';
-@import './pages/main/hero'
+@import './pages/main/hero';
+@import './components/footer';
