--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,3 +1,12 @@
+//my reset
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+// reset css
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
