--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,6 +14,9 @@
     flex-direction: column;
     gap: 58px;
   }
+  &__item:last-child{
+    margin-left: 30px;
+  }
   &__logo {
     font-weight: 500;
     font-size: 44px;
@@ -34,6 +37,17 @@
     font-size: 21px;
     color: #080809;
   }
+  &__copyright{
+    display: block;
+    width: 203px;
+
+    margin-top: 58px;
+    margin-left: 40px;
+
+    font-weight: 500;
+    font-size: 14px;
+    text-align: center;
+  }
 }
 
 .footer-links{
@@ -50,6 +64,10 @@
 .social-networks{
   display: flex;
   gap: 20px;
+
+  margin-left: 28px;
+  margin-bottom: 41px;
+
   &__svg{
     width: 24px;
     height: 24px;
@@ -60,6 +78,21 @@
   &__title{
     font-weight: 500;
     font-size: 20px;
+
+    margin-left: 2px;
+    margin-bottom: 16px;
+  }
+}
+
+.applications-links{
+  display: flex;
+  gap: 7px;
+  &__item  &__img{
+    width: 100px;
+    height: 35px;
+  }
+  &__item:first-child  &__img{
+    width: 107px;
   }
 }
 
