--- a/sass/utils/_variebles.scss
+++ b/sass/utils/_variebles.scss
@@ -1,3 +1,4 @@
 $primary-text-color:#5E6282;
 $second-text-color:#737373;
+$text-heading-color: #1E1D4C;
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
