--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,8 +1,8 @@
 .header {
-  background-color: #fff1da;
   @media screen and (max-width: 767.98px) {
     padding-top: 37px;
     padding-bottom: 98px;
+    background-color: #fff1da;
   }
   @media screen and (min-width: 768px) {
     position: absolute;
@@ -48,6 +48,8 @@
     display: flex;
     align-items: center;
     gap: 7px;
+    font-size: 17px;
+    line-height: 1.27;
     @media screen and (max-width: 767.98px) {
       padding-right: 45px;
     }
@@ -59,10 +61,15 @@
   &__burger {
     position: absolute;
     right: 20px;
-    width: 24px;
-    height: 14px;
+    width: 26px;
+    height: 16px;
+    padding: 0;
     background-color: transparent;
+    border-width: 1px;
     border-color: transparent;
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
     &-icon {
       width: 100%;
       height: 100%;
@@ -71,11 +78,17 @@
   &__mob-nav {
     margin-top: 93px;
     font-size: 30px;
+    line-height: 1.5;
     color: $second-text-color;
     @media screen and (min-width: 768px) {
       display: none;
     }
     &-item {
+      transition: transform 250ms $timing-function, color 250ms $timing-function;
+      &:hover {
+        color: $acent-color;
+        transform: scale(1.1);
+      }
       &:not(:last-child) {
         margin-bottom: 30px;
       }
