--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -50,6 +50,7 @@
     gap: 7px;
     font-size: 17px;
     line-height: 1.27;
+    cursor: pointer;
     @media screen and (max-width: 767.98px) {
       padding-right: 45px;
     }
@@ -67,6 +68,7 @@
     background-color: transparent;
     border-width: 1px;
     border-color: transparent;
+    cursor: pointer;
     @media screen and (min-width: 768px) {
       display: none;
     }
