--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -2,6 +2,7 @@ body{
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     line-height: 1.625;
+    color: $primary-text-color;
 }
 
 .container{
