--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -26,6 +26,11 @@
     }
   }
   &__nav {
+    font-family: 'Product Sans', sans-serif;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 1.27;
+    color: #212832;
     @media screen and (max-width: 767.98px) {
       display: none;
     }
@@ -79,6 +84,7 @@
   }
   &__mob-nav {
     margin-top: 93px;
+    font-family: "Poppins", sans-serif;
     font-size: 30px;
     line-height: 1.5;
     color: $second-text-color;
