--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -12,6 +12,12 @@ img{
     height: auto;
 }
 
+button{
+    border-width: 1px;
+    background-color: transparent;
+    border-color: transparent;
+}
+
 .container{
     max-width: 1200px;
     margin: 0 auto;
