--- a/sass/pages/main/_hero.scss
+++ b/sass/pages/main/_hero.scss
@@ -5,30 +5,61 @@
     background-repeat: no-repeat;
     background-position: top right;
   }
-  &__container{
+  &__container {
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  &__text-wrap{
-
+  &__text-wrap {
   }
-  &__desc{
+  &__desc {
     font-family: "Poppins", sans-serif;
     font-weight: 700;
     font-size: 20px;
     line-height: 1.5;
     color: $acent-color;
   }
-  &__title{
+  &__title {
+    max-width: 545px;
     font-family: "Volkhov", serif;
     font-size: 84px;
     font-weight: 700;
     line-height: 1.06;
-    color: #181E4B;
+    color: #181e4b;
   }
 
-  &__subtitle{
+  &__subtitle {
     line-height: 1.875;
+  }
+  &__btn-more {
+    width: 170px;
+    height: 60px;
+    background-color: #f1a501;
+    border-radius: 10px;
+    border-color: transparent;
+    font-family: "Product Sans", sans-serif;
+    font-size: 18px;
+    line-height: 1.275;
+    color: #ffffff;
+  }
+  &__btn-demo {
+    display: inline-flex;
+    align-items: center;
+    &-icon-wrap {
+      position: relative;
+      display: inline-block;
+      width: 52px;
+      height: 52px;
+      background-color: $acent-color;
+      border-radius: 50%;
+    }
+    &-icon {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-35%, -40%);
+      width: 15px;
+      height: 15px;
+    }
   }
 }
