--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -11,6 +11,13 @@ button{
 
 // reset css
 
+html {
+box-sizing: border-box;
+}
+html *, ::after, ::before{
+box-sizing: inherit;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
