--- a/sass/pages/main/_category.scss
+++ b/sass/pages/main/_category.scss
@@ -18,7 +18,7 @@
   }
 
   &__tittle{
-    font-family: 'Volkhov';
+    font-family: 'Volkhov', serif;
     font-weight: 700;
     font-size: 40px;
     line-height: 1.3; 
