--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,4 @@
 @import './pages/main/hero';
 @import './components/footer';
 @import './pages/main/category';
+@import './pages/main/destinations';
