--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,4 @@
 @import './components/footer';
 @import './pages/main/category';
 @import './pages/main/destinations';
+@import './pages/main/testimonals';
