--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,17 +1,17 @@
 .footer {
   background-color: #fff1da;
   &__container {
-    max-width: 420px;
+    @include responsive(max-width, 420, 768, 420, 768);
 
     padding-left: 78px;
     padding-top: 13px;
+    padding-bottom: 27px;
 
     line-height: 1.245;
     color: $primary-text-color;
   }
   &__list{
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 58px;
   }
   &__item:last-child{
@@ -19,7 +19,7 @@
   }
   &__logo {
     font-weight: 500;
-    font-size: 44px;
+    @include responsive(font-size, 44, 46, 420, 768);
     line-height: 1.5;
     color: #181E4B;
   }
@@ -31,10 +31,10 @@
     font-size: 13px;
   }
   &__title{
-    margin-bottom: 33px;
+    @include responsive(margin-bottom, 33, 20, 420, 768);
 
     font-weight: 700;
-    font-size: 21px;
+    @include responsive(font-size, 21, 24, 420, 768);
     color: #080809;
   }
   &__copyright{
@@ -47,6 +47,9 @@
     font-weight: 500;
     font-size: 14px;
     text-align: center;
+    &:hover{
+      text-decoration: underline;
+    }
   }
 }
 
@@ -56,7 +59,7 @@
   }
   &__link{
     font-weight: 500;
-    font-size: 18px;
+    @include responsive(font-size, 18, 20, 420, 768);
     line-height: 1.245;
   }
 }
@@ -96,3 +99,188 @@
   }
 }
 
+@media screen and (min-width: 768px){
+  .footer {
+    &__container {
+      @include responsive(max-width, 768, 1440, 768, 1440);
+  
+      padding-top: 35px;
+      padding-right: 108px;
+  
+    }
+    &__list{
+      grid-template-columns: 1fr 0.3fr;
+      grid-template-rows: 1fr 1fr 1fr;
+      gap: 24px;
+    }
+    &__item:first-child{
+      grid-row-start: 1;
+    }
+    &__item:nth-child(2), &__item:nth-child(3), &__item:nth-child(4){
+      grid-column-start: 2;
+    }
+    &__item:last-child{
+      grid-row-start: 3;
+      margin-left: 0;
+    }
+    &__logo {
+      @include responsive(font-size, 44, 64, 768, 1440);
+      line-height: 1.5;
+    }
+    &__description{
+      width: 207px;
+  
+      margin-top: 19px;
+  
+      font-size: 13px;
+    }
+    &__title{
+      margin-bottom: 10px;
+  
+      @include responsive(font-size, 21, 28, 768, 1440);
+    }
+    &__copyright{
+      @include responsive(width, 203, 233, 768, 1440);
+  
+      margin: 0 auto;
+      margin-top: 58px;
+  
+      @include responsive(font-size, 14, 16, 768, 1440);
+    }
+  }
+
+  .footer-links{
+    &__item:not(:last-child){
+      margin-bottom: 7px;
+    }
+    &__link{
+      font-weight: 500;
+      font-size: 18px;
+    }
+  }
+  
+  .social-networks{
+    display: flex;
+    gap: 20px;
+  
+    margin-left: 5px;
+    margin-bottom: 21px;
+    &__svg{
+      @include responsive(width, 24, 30, 768, 1440);
+      @include responsive(height, 24, 30, 768, 1440);
+    }
+  }
+  
+  .applications{
+    &__title{
+      @include responsive(font-size, 20, 24, 768, 1440);
+  
+      margin-left: 2px;
+      margin-bottom: 16px;
+    }
+  }
+  
+  .applications-links{
+    display: flex;
+    gap: 7px;
+  }
+}
+
+@media screen and (min-width: 1440px){
+  .footer {
+    background-color: #FFFFFF;
+    &__container {
+      max-width: 1440px;
+  
+      padding-top: 96px;
+      padding-left: 186px;
+      padding-right: 15px;
+    }
+    &__list{
+      grid-template-columns: 283px 180px 179px 198px 214px;
+      grid-template-rows: 1fr;
+      gap: 0;
+    }
+    &__item:first-child{
+      grid-row-start: 1;
+      margin-right: 83px;
+    }
+    &__item:nth-child(2){
+      grid-column-start: 2;
+      margin-right: 73px;
+    }
+    &__item:nth-child(3){
+      grid-column-start: 3;
+      margin-right: 91px;
+    }
+    &__item:nth-child(4){
+      grid-column-start: 4;
+      margin-right: 82px;
+    }
+    &__item:last-child{
+      grid-row-start: 1;
+      grid-column-start: 5;
+      margin-left: 0;
+    }
+    &__logo {
+      font-size: 44px;
+      line-height: 1.5;
+    }
+    &__description{
+      width: 207px;
+  
+      margin-top: 19px;
+  
+      font-size: 13px;
+    }
+    &__title{
+      margin-bottom: 34px;
+  
+      font-size: 21px;
+    }
+    &__copyright{
+      width: 203px;
+      
+      margin-top: 84px;
+      margin-left: 430px;
+  
+      font-weight: 500;
+      font-size: 14px;
+    }
+  }
+
+  .footer-links{
+    &__item:not(:last-child){
+      margin-bottom: 13px;
+    }
+    &__link{
+      font-size: 18px;
+    }
+  }
+  
+  .social-networks{
+    display: flex;
+    gap: 20px;
+  
+    margin-left: 8px;
+    margin-bottom: 35px;
+    &__svg{
+      width: 24px;
+      height: 24px;
+    }
+  }
+  
+  .applications{
+    &__title{
+      font-size: 20px;
+  
+      margin-left: 2px;
+      margin-bottom: 16px;
+    }
+  }
+  
+  .applications-links{
+    display: flex;
+    gap: 7px;
+  }
+}
