--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,4 @@
 @import './pages/main/category';
 @import './pages/main/destinations';
 @import './pages/main/testimonals';
+@import './pages/main/partners';
