--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,4 @@
 @import './pages/main/destinations';
 @import './pages/main/testimonals';
 @import './pages/main/partners';
+@import './pages/main/_subscride';
