--- a/sass/pages/main/_category.scss
+++ b/sass/pages/main/_category.scss
@@ -6,9 +6,9 @@
     padding-bottom: 194px;
 
     color: $primary-text-color;
-    text-align: center;   
+    text-align: center;
   }
-  &__desk{
+  &__desk {
     margin-bottom: 24px;
 
     text-transform: uppercase;
@@ -17,17 +17,17 @@
     line-height: 1.5;
   }
 
-  &__tittle{
-    font-family: 'Volkhov', serif;
+  &__tittle {
+    font-family: "Volkhov", serif;
     font-weight: 700;
     font-size: 40px;
-    line-height: 1.3; 
-    color: #14183E;
+    line-height: 1.3;
+    color: #14183e;
 
     margin-bottom: 13px;
   }
 
-  &__btn{
+  &__btn {
     background-color: transparent;
     color: $second-text-color;
     font-size: 20px;
@@ -40,25 +40,26 @@
   }
 }
 
-.category-list{
+.category-list {
   display: flex;
   flex-direction: column;
   gap: 37px;
   align-items: center;
-  &__item:nth-child(3), &__item:nth-child(4){
+  &__item:nth-child(3),
+  &__item:nth-child(4) {
     display: none;
   }
-  &__item:nth-child(1) &__img{
+  &__item:nth-child(1) &__img {
     width: 94px;
     height: 79px;
     margin-bottom: 30px;
   }
-  &__item:nth-child(2) &__img{
+  &__item:nth-child(2) &__img {
     width: 130px;
     height: 107px;
     margin-bottom: 20px;
   }
-  &__title{
+  &__title {
     font-weight: 600;
     font-size: 20px;
     line-height: 1.4;
@@ -66,7 +67,7 @@
 
     margin-bottom: 15px;
   }
-  &__text{
+  &__text {
     font-weight: 500;
     line-height: 1.6;
     width: 185px;
@@ -74,17 +75,22 @@
   }
 }
 
-.category-active{
-  box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.02), 0px 64.8148px 46.8519px rgba(0, 0, 0, 0.0151852), 0px 38.5185px 25.4815px rgba(0, 0, 0, 0.0121481), 0px 20px 13px rgba(0, 0, 0, 0.01), 0px 8.14815px 6.51852px rgba(0, 0, 0, 0.00785185), 0px 1.85185px 3.14815px rgba(0, 0, 0, 0.00481481);
+.category-active {
+  box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.02),
+    0px 64.8148px 46.8519px rgba(0, 0, 0, 0.0151852),
+    0px 38.5185px 25.4815px rgba(0, 0, 0, 0.0121481),
+    0px 20px 13px rgba(0, 0, 0, 0.01),
+    0px 8.14815px 6.51852px rgba(0, 0, 0, 0.00785185),
+    0px 1.85185px 3.14815px rgba(0, 0, 0, 0.00481481);
   border-radius: 36px;
   padding-bottom: 45px;
   padding-top: 25px;
   width: 273px;
   position: relative;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
-.category-active::before{
+.category-active::before {
   content: "";
 
   width: 102px;
@@ -95,6 +101,101 @@
   left: -36px;
   z-index: -1;
 
-  background: #DF6951;
+  background: #df6951;
   border-radius: 30px 0px 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .category {
+    &__container {
+      @include responsive(max-width, 768, 1440, 768, 1440);
+
+      @include responsive(padding-top, 18, 92, 768, 1440);
+      @include responsive(padding-bottom, 194, 200, 768, 1440);
+    }
+    &__desk {
+      @include responsive(margin-bottom, 24,10, 768, 1440);
+
+      @include responsive(font-size, 20, 18, 768, 1440);
+    }
+    &__tittle {
+      @include responsive(font-size, 40, 50, 768, 1440);
+
+      @include responsive(margin-bottom, 13, 68, 768, 1440);
+    }
+    &__btn {
+      display: none;
+    }
+  }
+
+  .category-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    @include responsive(gap, 37, 73, 768, 1440);
+    justify-content: center;
+    &__item:nth-child(3),
+    &__item:nth-child(4) {
+      display: block;
+    }
+    &__item:nth-child(1) &__img {
+      width: 92px;
+      height: 78px;
+      margin-bottom: 30px;
+    }
+    &__item:nth-child(2) &__img {
+      width: 130px;
+      height: 117px;
+      margin-bottom: 0;
+    }
+    &__item:nth-child(3) &__img {
+      width: 67px;
+      height: 75px;
+      margin: 0 auto 34px;
+    }
+    &__item:nth-child(4) &__img {
+      width: 77px;
+      height: 66px;
+      margin-bottom: 30px;
+    }
+  }
+
+  .category-active {
+    @include responsive(padding-top, 25, 0, 768, 1440);
+    @include responsive(width, 273, 267, 768, 1440);
+  }
+
+  .category-active::before {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .category {
+    &__container {
+      max-width: 1440px;
+
+      padding-top: 92px;
+      padding-bottom: 200px;
+    }
+    &__desk {
+      margin-top: 10px;
+
+      font-size: 18px;
+    }
+    &__tittle {
+      font-size: 50px;
+
+      margin-bottom: 68px;
+    }
+  }
+
+  .category-list {
+    gap: 73px;
+  }
+
+  .category-active {
+    padding-top: 0;
+    width: 267px;
+  }
 }
