--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,4 +11,4 @@
 @import './pages/main/destinations';
 @import './pages/main/testimonals';
 @import './pages/main/partners';
-@import './pages/main/_subscride';
+@import './pages/main/subscribe';
