--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,4 @@
 @import './pages/main/testimonals';
 @import './pages/main/partners';
 @import './pages/main/subscribe';
+@import './pages/main/advantages';
