--- a/sass/pages/main/_category.scss
+++ b/sass/pages/main/_category.scss
@@ -59,6 +59,35 @@
     height: 107px;
     margin-bottom: 20px;
   }
+  &__item:hover,  &__item:focus{
+    transition: 100ms $timing-function;
+    box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.02),
+      0px 64.8148px 46.8519px rgba(0, 0, 0, 0.0151852),
+      0px 38.5185px 25.4815px rgba(0, 0, 0, 0.0121481),
+      0px 20px 13px rgba(0, 0, 0, 0.01),
+      0px 8.14815px 6.51852px rgba(0, 0, 0, 0.00785185),
+      0px 1.85185px 3.14815px rgba(0, 0, 0, 0.00481481);
+    border-radius: 36px;
+    padding-bottom: 45px;
+    padding-top: 25px;
+    width: 273px;
+    position: relative;
+    background-color: #ffffff;
+    &::before {
+      content: "";
+
+      width: 102px;
+      height: 101px;
+
+      position: absolute;
+      bottom: -33px;
+      left: -36px;
+      z-index: -1;
+
+      background: #df6951;
+      border-radius: 30px 0px 10px;
+    }
+  }
   &__title {
     font-weight: 600;
     font-size: 20px;
@@ -75,36 +104,6 @@
   }
 }
 
-.category-active {
-  box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.02),
-    0px 64.8148px 46.8519px rgba(0, 0, 0, 0.0151852),
-    0px 38.5185px 25.4815px rgba(0, 0, 0, 0.0121481),
-    0px 20px 13px rgba(0, 0, 0, 0.01),
-    0px 8.14815px 6.51852px rgba(0, 0, 0, 0.00785185),
-    0px 1.85185px 3.14815px rgba(0, 0, 0, 0.00481481);
-  border-radius: 36px;
-  padding-bottom: 45px;
-  padding-top: 25px;
-  width: 273px;
-  position: relative;
-  background-color: #ffffff;
-}
-
-.category-active::before {
-  content: "";
-
-  width: 102px;
-  height: 101px;
-
-  position: absolute;
-  bottom: -33px;
-  left: -36px;
-  z-index: -1;
-
-  background: #df6951;
-  border-radius: 30px 0px 10px;
-}
-
 @media screen and (min-width: 768px) {
   .category {
     &__container {
@@ -114,7 +113,7 @@
       @include responsive(padding-bottom, 194, 156, 768, 1440);
     }
     &__desk {
-      @include responsive(margin-bottom, 24,10, 768, 1440);
+      @include responsive(margin-bottom, 24, 10, 768, 1440);
 
       @include responsive(font-size, 20, 18, 768, 1440);
     }
@@ -157,16 +156,14 @@
       height: 66px;
       margin-bottom: 30px;
     }
-  }
-
-  .category-active {
-    @include responsive(padding-top, 25, 0, 768, 1440);
-    @include responsive(width, 273, 267, 768, 1440);
-  }
-
-  .category-active::before {
-    width: 100px;
-    height: 100px;
+    &__item:hover {
+      @include responsive(padding-top, 25, 0, 768, 1440);
+      @include responsive(width, 273, 267, 768, 1440);
+      &::before {
+        width: 100px;
+        height: 100px;
+      }
+    }
   }
 }
 
@@ -178,7 +175,7 @@
 
       padding-top: 92px;
       padding-bottom: 156px;
-      &::before{
+      &::before {
         content: "";
         width: 153px;
         height: 166px;
