--- a/sass/pages/main/_destinations.scss
+++ b/sass/pages/main/_destinations.scss
@@ -59,6 +59,15 @@
       drop-shadow(0px 20px 13px rgba(0, 0, 0, 0.01))
       drop-shadow(0px 8.14815px 6.51852px rgba(0, 0, 0, 0.00785185))
       drop-shadow(0px 1.85185px 3.14815px rgba(0, 0, 0, 0.00481481));
+    &:hover, &:focus{
+      transition: 200ms $timing-function;
+      filter: drop-shadow(0px 100px 80px rgba(0, 0, 0, 0.05))
+      drop-shadow(0px 64.8148px 46.8519px rgba(0, 0, 0, 0.0451852))
+      drop-shadow(0px 38.5185px 25.4815px rgba(0, 0, 0, 0.0421481))
+      drop-shadow(0px 20px 13px rgba(0, 0, 0, 0.11))
+      drop-shadow(0px 8.14815px 6.51852px rgba(0, 0, 0, 0.03785185))
+      drop-shadow(0px 1.85185px 3.14815px rgba(0, 0, 0, 0.04481481));
+    }
   }
   &__item:nth-child(1) {
     margin-bottom: 76px;
