--- a/sass/pages/main/_partners.scss
+++ b/sass/pages/main/_partners.scss
@@ -1,16 +1,16 @@
 .partners {
-    padding-top: 17px;
-    padding-bottom: 83px;
-    &__desc{
-        margin-bottom: 31px;
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 1.5;
-        text-align: center;
-        @media screen and (min-width:768px) {
-            display: none;
-        }
+  padding-top: 17px;
+  padding-bottom: 83px;
+  &__desc {
+    margin-bottom: 31px;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.5;
+    text-align: center;
+    @media screen and (min-width: 768px) {
+      display: none;
     }
+  }
   &__list {
     display: flex;
     align-items: center;
@@ -20,14 +20,27 @@
   &__item {
     width: 240px;
     margin: 0 auto;
-    @media screen and (min-width:500px) and (max-width:999.8px) {
-        width: calc((100% - 20px) / 2);
+    mix-blend-mode: luminosity;
+    @media screen and (min-width: 500px) and (max-width: 999.8px) {
+      width: calc((100% - 20px) / 2);
     }
-    @media screen and (min-width:1000px) {
-        width: calc((100% - 20px) / 4);
+    @media screen and (min-width: 1000px) {
+      width: calc((100% - 20px) / 5);
+    }
+    &:last-child {
+      display: none;
+    }
+    &:hover, &:focus{
+      mix-blend-mode: normal;
     }
   }
   &__img {
     margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .partners__item:last-child {
+    display: block;
   }
 }
