--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -10,34 +10,34 @@
     line-height: 1.245;
     color: $primary-text-color;
   }
-  &__list{
+  &__list {
     display: grid;
     gap: 58px;
   }
-  &__item:last-child{
+  &__item:last-child {
     margin-left: 30px;
   }
   &__logo {
     font-weight: 500;
     @include responsive(font-size, 44, 46, 420, 768);
     line-height: 1.5;
-    color: #181E4B;
+    color: #181e4b;
   }
-  &__description{
+  &__description {
     width: 207px;
 
     margin-top: 19px;
 
     font-size: 13px;
   }
-  &__title{
+  &__title {
     @include responsive(margin-bottom, 33, 20, 420, 768);
 
     font-weight: 700;
     @include responsive(font-size, 21, 24, 420, 768);
     color: #080809;
   }
-  &__copyright{
+  &__copyright {
     display: block;
     width: 203px;
 
@@ -47,38 +47,38 @@
     font-weight: 500;
     font-size: 14px;
     text-align: center;
-    &:hover{
+    &:hover {
       text-decoration: underline;
     }
   }
 }
 
-.footer-links{
-  &__item:not(:last-child){
+.footer-links {
+  &__item:not(:last-child) {
     margin-bottom: 13px;
   }
-  &__link{
+  &__link {
     font-weight: 500;
     @include responsive(font-size, 18, 20, 420, 768);
     line-height: 1.245;
   }
 }
 
-.social-networks{
+.social-networks {
   display: flex;
   gap: 20px;
 
   margin-left: 28px;
   margin-bottom: 41px;
 
-  &__svg{
+  &__svg {
     width: 24px;
     height: 24px;
   }
 }
 
-.applications{
-  &__title{
+.applications {
+  &__title {
     font-weight: 500;
     font-size: 20px;
 
@@ -87,39 +87,40 @@
   }
 }
 
-.applications-links{
+.applications-links {
   display: flex;
   gap: 7px;
-  &__item  &__img{
+  &__item &__img {
     width: 100px;
     height: 35px;
   }
-  &__item:first-child  &__img{
+  &__item:first-child &__img {
     width: 107px;
   }
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
   .footer {
     &__container {
       @include responsive(max-width, 768, 1440, 768, 1440);
-  
+
       padding-top: 35px;
       padding-right: 108px;
-  
     }
-    &__list{
+    &__list {
       grid-template-columns: 1fr 0.3fr;
       grid-template-rows: 1fr 1fr 1fr;
       gap: 24px;
     }
-    &__item:first-child{
+    &__item:first-child {
       grid-row-start: 1;
     }
-    &__item:nth-child(2), &__item:nth-child(3), &__item:nth-child(4){
+    &__item:nth-child(2),
+    &__item:nth-child(3),
+    &__item:nth-child(4) {
       grid-column-start: 2;
     }
-    &__item:last-child{
+    &__item:last-child {
       grid-row-start: 3;
       margin-left: 0;
     }
@@ -127,159 +128,168 @@
       @include responsive(font-size, 44, 64, 768, 1440);
       line-height: 1.5;
     }
-    &__description{
+    &__description {
       width: 207px;
-  
+
       margin-top: 19px;
-  
+
       font-size: 13px;
     }
-    &__title{
+    &__title {
       margin-bottom: 10px;
-  
+
       @include responsive(font-size, 21, 28, 768, 1440);
     }
-    &__copyright{
+    &__copyright {
       @include responsive(width, 203, 233, 768, 1440);
-  
+
       margin: 0 auto;
       margin-top: 58px;
-  
+
       @include responsive(font-size, 14, 16, 768, 1440);
     }
   }
 
-  .footer-links{
-    &__item:not(:last-child){
+  .footer-links {
+    &__item:not(:last-child) {
       margin-bottom: 7px;
     }
-    &__link{
+    &__link {
       font-weight: 500;
       font-size: 18px;
     }
   }
-  
-  .social-networks{
+
+  .social-networks {
     display: flex;
     gap: 20px;
-  
+
     margin-left: 5px;
     margin-bottom: 21px;
-    &__svg{
+    &__svg {
       @include responsive(width, 24, 30, 768, 1440);
       @include responsive(height, 24, 30, 768, 1440);
     }
   }
-  
-  .applications{
-    &__title{
+
+  .applications {
+    &__title {
       @include responsive(font-size, 20, 24, 768, 1440);
-  
+
       margin-left: 2px;
       margin-bottom: 16px;
     }
   }
-  
-  .applications-links{
+
+  .applications-links {
     display: flex;
     gap: 7px;
   }
 }
 
-@media screen and (min-width: 1440px){
+@media screen and (min-width: 1200px) {
   .footer {
-    background-color: #FFFFFF;
-    &__container {
-      max-width: 1440px;
-  
-      padding-top: 96px;
-      padding-left: 186px;
-      padding-right: 15px;
-    }
-    &__list{
+    background-color: #ffffff;
+    &__list {
       grid-template-columns: 283px 180px 179px 198px 214px;
       grid-template-rows: 1fr;
+      justify-content: center;
       gap: 0;
     }
-    &__item:first-child{
+    &__item:first-child {
       grid-row-start: 1;
       margin-right: 83px;
     }
-    &__item:nth-child(2){
+    &__item:nth-child(2) {
       grid-column-start: 2;
       margin-right: 73px;
     }
-    &__item:nth-child(3){
+    &__item:nth-child(3) {
       grid-column-start: 3;
       margin-right: 91px;
     }
-    &__item:nth-child(4){
+    &__item:nth-child(4) {
       grid-column-start: 4;
       margin-right: 82px;
     }
-    &__item:last-child{
+    &__item:last-child {
       grid-row-start: 1;
       grid-column-start: 5;
       margin-left: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .footer {
+    &__container {
+      max-width: 1440px;
+
+      padding-top: 96px;
+      padding-left: 186px;
+      padding-right: 15px;
     }
     &__logo {
       font-size: 44px;
       line-height: 1.5;
     }
-    &__description{
+    &__description {
       width: 207px;
-  
+
       margin-top: 19px;
-  
+
       font-size: 13px;
     }
-    &__title{
+    &__list{
+      justify-content: start;
+    }
+    &__title {
       margin-bottom: 34px;
-  
+
       font-size: 21px;
     }
-    &__copyright{
+    &__copyright {
       width: 203px;
-      
+
       margin-top: 84px;
       margin-left: 430px;
-  
+
       font-weight: 500;
       font-size: 14px;
     }
   }
 
-  .footer-links{
-    &__item:not(:last-child){
+  .footer-links {
+    &__item:not(:last-child) {
       margin-bottom: 13px;
     }
-    &__link{
+    &__link {
       font-size: 18px;
     }
   }
-  
-  .social-networks{
+
+  .social-networks {
     display: flex;
     gap: 20px;
-  
+
     margin-left: 8px;
     margin-bottom: 35px;
-    &__svg{
+    &__svg {
       width: 24px;
       height: 24px;
     }
   }
-  
-  .applications{
-    &__title{
+
+  .applications {
+    &__title {
       font-size: 20px;
-  
+
       margin-left: 2px;
       margin-bottom: 16px;
     }
   }
-  
-  .applications-links{
+
+  .applications-links {
     display: flex;
     gap: 7px;
   }
